src- Version 4.19/objects/Credit_Line__c.object
<CustomObject>
    <customHelpPage>support</customHelpPage>
    <fields>
        <fullName>Accounting_Code__c</fullName>
        <label>Accounting Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calculated_Quantity__c</fullName>
        <label>Calculated Quantity</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Charge_End_Date__c</fullName>
        <label>Charge End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Charge_Start_Date__c</fullName>
        <label>Charge Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Credit_Note__c</fullName>
        <label>Credit Note</label>
        <referenceTo>Credit_Note__c</referenceTo>
        <relationshipLabel>Credit Lines</relationshipLabel>
        <relationshipName>Credit_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Credit_Type_Applied__c</fullName>
        <description>This field is used when partial credit is applied. 
Amount - when you explicitly specify a credit amount
Date - when you want the system to calculate the credit based on the dates (applies only for subscriptions)
Both - when you explicitly specify a credit amount but you want the revrec to allocate it to the mentioned period</description>
        <inlineHelpText>Used for partial credit
Amount - explicitly specify a credit amount
Date - system would calculate the credit based on the dates (applies only for subscriptions)
Both - specify a credit amount but revrec is allocated to specified period</inlineHelpText>
        <label>Credit Type Applied</label>
        <picklist>
            <picklistValues>
                <fullName>Amount</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CurrencyL__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Currency</label>
        <referenceTo>Currency__c</referenceTo>
        <relationshipLabel>Credit Lines</relationshipLabel>
        <relationshipName>Credit_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deferred_Revenue_Accounting_Code__c</fullName>
        <label>Deferred Revenue Accounting Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Value__c</fullName>
        <label>Obsolete Discount Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Error_Reason_for_Revenue_Recognition__c</fullName>
        <label>Error Reason for Revenue Recognition</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Invoice_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Line</label>
        <referenceTo>Invoice_Lines__c</referenceTo>
        <relationshipLabel>Credit Lines</relationshipLabel>
        <relationshipName>Credit_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <label>Invoice</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>Credit Lines</relationshipLabel>
        <relationshipName>Credit_Lines</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Line_Amount__c</fullName>
        <label>Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Line_Name__c</fullName>
        <label>Line Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Total__c</fullName>
        <formula>Line_Amount__c - Discount_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_Rate_Plan_Charge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Rate Plan Charge</label>
        <referenceTo>Job_Rate_Plan_Charge__c</referenceTo>
        <relationshipLabel>Credit Lines</relationshipLabel>
        <relationshipName>Credit_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Job__c</referenceTo>
        <relationshipLabel>Credit Lines</relationshipLabel>
        <relationshipName>Credit_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Price_Type__c</fullName>
        <description>The frequency at which the charge will be billed (One Time, Monthly, Quarterly, Annual etc)</description>
        <inlineHelpText>The frequency at which the charge will be billed (One Time, Monthly, Quarterly, Annual etc)</inlineHelpText>
        <label>Price Type</label>
        <picklist>
            <picklistValues>
                <fullName>One Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Half Yearly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Usage</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pricing_Model__c</fullName>
        <description>This will specify whether price is default type or tiered type.</description>
        <inlineHelpText>This will specify whether price is default type or tiered type.</inlineHelpText>
        <label>Pricing Model</label>
        <picklist>
            <picklistValues>
                <fullName>Flat Fee Pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Per Unit Pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tiered Pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volume Pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Percentage Pricing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Rate_Plan_Charge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Rate Plan Charge</label>
        <referenceTo>Product_Rate_Plan_Charge__c</referenceTo>
        <relationshipLabel>Credit Lines</relationshipLabel>
        <relationshipName>Credit_Lines_Charge</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Credit Lines</relationshipLabel>
        <relationshipName>Credit_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revenue_Recognition_End_Date__c</fullName>
        <label>Revenue Recognition End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Revenue_Recognition_Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Revenue Recognition Rule</label>
        <referenceTo>Revenue_Recognition_Rule__c</referenceTo>
        <relationshipLabel>Credit Lines</relationshipLabel>
        <relationshipName>Credit_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Revenue_Recognition_Start_Date__c</fullName>
        <label>Revenue Recognition Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Revenue_Recognition_Status__c</fullName>
        <label>Revenue Recognition Status</label>
        <picklist>
            <picklistValues>
                <fullName>Queued</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sequence_No__c</fullName>
        <label>Sl No</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Posted</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tax_Code__c</fullName>
        <label>Tax Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <label>Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Line_Value__c</fullName>
        <formula>Line_Amount__c - Discount_Value__c + VAT__c + Tax__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Line Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UOM__c</fullName>
        <label>UOM</label>
        <picklist>
            <picklistValues>
                <fullName>Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>License</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unit</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VAT__c</fullName>
        <label>VAT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Credit Line</label>
    <nameField>
        <displayFormat>CLINE--{0000}</displayFormat>
        <label>Credit Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>